# AgoraMeetingExample-Electron

./: .env.template  .gitignore  .gitmodules  README.md  README.zh.md  package-lock.json  package.json
.erb/configs/: webpack.config.base.js
assets/: entitlements.mac.plist
plugin/: .gitignore  binding.gyp  just-task.js  package.json  tsconfig.json
plugin/libs/: index.ts
plugin/scripts/: build.js  cleanup.js  npm_argv.js
plugin/src/: napi_async.cpp  napi_async.h  napi_event.h  napi_utils.cpp  napi_utils.h  plugin.cc  plugin.h
plugin/window-monitor/: .gitignore  CMakeLists.txt  README.md
plugin/window-monitor/include/: base.h  monitor.h
plugin/window-monitor/src/macos/: bridging.h  monitor.mm
plugin/window-monitor/src/win32/: function_stub.cpp  function_stub.h  hooker.cpp  hooker.h  monitor.cpp
plugin/window-monitor/test/: main.cpp  main.mm
src/: App.tsx  app.global.scss  index.css  index.html  index.tsx  main.dev.ts  package.json  worker.js
src/examples/advanced/ScreenShare/: ScreenShare.tsx
src/hooks/: index.ts  provider.tsx  types.ts
src/hooks/attendee/: context.ts  hooks.ts  index.ts  manager.ts  provider.tsx  types.ts
src/hooks/common/: context.ts  hooks.ts  index.ts  manager.ts  provider.tsx  types.ts
src/hooks/engine/: context.ts  hooks.ts  provider.tsx
src/hooks/info/: context.ts  hooks.ts  index.ts  reducer.ts
src/hooks/manager/: attendee.ts  common.ts  context.ts  hooks.ts  index.ts  localstorage.ts  manager.ts  meeting.ts  types.ts
src/hooks/manager/rtc/: cert.ts  manager.ts  recommend.ts  screenshare.ts  types.ts  utils.ts
src/hooks/manager/whiteboard/: api.ts  manager.ts  pptmonitor.ts  types.ts
src/hooks/manager/whiteboard/cert/: cert.ts  index.ts
src/hooks/store/: context.ts  hooks.ts  index.ts  reducer.ts  types.ts
src/old/examples/basic/: JoinChannelAudio.tsx
src/utils/: crashreport.ts  focushelper.ts  localstorage.ts  logtransports.ts  pipe.ts  pptmonitor.ts  pptmonitor.vbs  resource.ts  tempfile.ts
src/views/components/header/: index.tsx  layout.tsx
src/views/components/video/: index.tsx
src/views/components/videobox/: index.tsx  style.ts
src/views/components/whiteboard/: index.tsx  style.ts
src/views/main/: index.tsx  style.ts
src/views/meeting/: index.tsx  style.ts
src/views/meeting/attendees/: index.tsx  style.ts  utils.ts
src/views/meeting/attendees/attendee/: index.tsx  style.ts
src/views/meeting/attendees/grid/: index.tsx  style.ts
src/views/meeting/attendees/speaker/: index.tsx  style.ts
src/views/meeting/screenshare/: index.tsx
src/views/meeting/toolbar/: index.tsx  style.ts  toolbar.tsx
src/views/oops/: index.tsx  style.ts
src/views/setting/: index.tsx  style.ts
src/views/setting/pages/: about.tsx  audio.tsx  common.tsx  deviceselect.tsx  video.tsx
